# tego-lang

./: .gitignore  .project  CHANGELOG.md  Cargo.toml  README.md  TODO.md  delete-me.md
docs/: grammar
examples/: addOne.tgo  fibList.out  fibList.tgo  joinUnit.tgo  primes.out  primes.tgo  sum.tgo
feature-tests/: boxedTuple.out  intApp.tgo  ioCommand.tgo  match.out  match.tgo
src/: ast.rs  checker.rs  codefile.rs  environment.rs  interpreter.rs  lib.rs  main.rs  parser.rs  repl.rs  type_.rs  value.rs
src/ast/: decl.rs  expr.rs  match_.rs  mod.rs  prog.rs
src/execute/: environment.rs  interpreter.rs  mod.rs  value.rs
src/execute/interpreter/: prelude.rs
src/execute/value/: command.rs  function.rs  tuple.rs
src/interpreter/: value.rs
src/parser/: decl.rs  error.rs  expr.rs  match_.rs  mod.rs  prog.rs  span.rs  tokens.rs
tego/: Cargo.toml
tego/examples/: fib.tgo  joinUnit.out  list.out  list.tgo  primes.tgo  sum.out
tego/feature-tests/: boxedTuple.out  boxedTuple.tgo  dotOperator.out  dotOperator.tgo  intApp.tgo  ioCommand.tgo  match.out
tego/src/: codefile.rs  repl.rs
tego/tests/: cli.rs
tego_analysis/: Cargo.toml
tego_analysis/src/: lib.rs
tego_analysis/src/ast/: decl.rs  expr.rs  map.rs  match_.rs  mod.rs  prog.rs
tego_analysis/src/transform/: match_.rs  mod.rs
tego_interpreter/: Cargo.toml
tego_interpreter/src/: environment.rs  interpreter.rs  lib.rs  prelude.rs  type_.rs  value.rs
tego_interpreter/src/value/: command.rs  (+2 more)
tego_parser/: Cargo.toml
tego_parser/src/: error.rs  lib.rs  parsers.rs  span.rs  traits.rs
tests/: cli.rs
(+14 files in other folders)
